Minor Fix: no horizontal scroll for dashboard

--- a/assets/dashboard/styles/style.css
+++ b/assets/dashboard/styles/style.css
@@ -127,6 +127,7 @@ body{
 	margin-left: 20px;
 	width: 100%;
 	overflow-y:scroll;
+	overflow-x: hidden;
 }
 
 .game-container{
